--- a/ANSI C/CMakeLists.txt
+++ b/ANSI C/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c90 -Wall -Werror -pedantic")
 
 set(SOURCE_FILES test.c)
 add_executable(ex_14 ${SOURCE_FILES})
-target_link_libraries(ex_14 m)
+target_link_libraries(ANCI_C m)
